# chargen

./: .gitignore  HEMINGWAY.md  LICENSE  Makefile  README.md  chargen-server.py  launch-server.py  necesidades.csv  necesidadesCsvToJson.py  notebook.ipynb  pyproject.toml  requirements.txt  setup.py
chargen/: __init__.py  casamentera.py  character.py  core.py  grafolocalizaciones.py  render.py
chargen/application/: CharacterBuilder.py  (+2 more)
json/: jason.json  personaje_100.json  personaje_101.json  personaje_102.json  personaje_103.json  personaje_104.json  personaje_105.json  personaje_106.json  personaje_107.json  personaje_108.json  personaje_109.json  personaje_10_13.json  personaje_110.json  personaje_111.json  personaje_112.json  personaje_113.json  personaje_114.json  personaje_115.json  personaje_116.json  personaje_117.json  personaje_118.json  personaje_119.json  personaje_11_614.json  personaje_12_591.json  personaje_13_593.json  personaje_14_614.json  personaje_15_618.json  personaje_16_618.json  personaje_18_641.json  personaje_19_647.json  personaje_20_652.json  personaje_21_653.json  personaje_22_613.json  personaje_23_578.json  personaje_24_554.json  personaje_25_560.json  personaje_26_587.json  personaje_28_608.json  personaje_29_603.json  personaje_30_587.json  (+63 more)
tests/: __init__.py  context.py  test_CharacterBuilder.py  test_CulturalNameModule.py  test_DBAdapterFactory.py  test_InputNameModule.py  test_ModuleFactory.py  test_advanced.py  test_basic.py  test_casamentera.py  test_character.py  test_example.py  test_render.py  test_tinyDBAdapter.py
(+19 files in other folders)
