[tool.poetry]
name = "chargen"
version = "0.1.0"
description = "Character generator for narrative and RPG"
authors = ["Baselga Masia, David"]
license = "CoffeeWare"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dependency-injector = "^4.41.0"
nose = "^1.3.7"
sphinx = "^6.2.1"
tinydb = "^4.7.1"
fastapi = "^0.95.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
